--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --gris2: #2f3848;
   --gris3: #1a202d;
   --negro: #000000;
+  --rojo: #f05f5f; 
   --headingFont: 'Raleway', sans-serif;
   --textFont: 'Roboto', sans-serif;
 }
@@ -104,6 +105,11 @@ a {
   padding: 0;
   display: block;
   background-color: transparent;
+}
+
+.btn-eliminar{
+  background-color: var(--rojo);
+  color: var(--blanco);
 }
 
 .cerrar-sesion {
